# djangoProject

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  clean_docker_logs.sh  docker-compose.yml  init.sh  nginx.conf  pyproject.toml  requirements.txt  requirements.txt.bak  start.sh  upstream_apps.conf
.devcontainer/: devcontainer.json
.github/workflows/: build-docker.yml
celery_demo/: apps.py  tasks.py  urls.py  views.py
djangoProject/: README.md  celery.py  local_settings.py  local_urls.py  settings.py  tasks.py  urls.py
djangoProject/common/: decorators.py  response.py
django_mail/: README.md  apps.py  models.py  pyproject.toml  send_email.py  tasks.py  urls.py  utils.py  views.py
django_mail/templates/django_mail/: base.html  email.html
django_mailbox/: form.py  models.py  tasks.py  urls.py  utils.py  views.py
django_mailbox/templates/django_mailbox/: base.html  batch_tasks.html  task_status.html
etc/nginx/: nginx.conf
etc/nginx/conf.d/: nginx.conf  upstream_apps.conf
static/css/: main.css
static/js/: main.js
templates/django_cron/: add.html  edit.html  index.html  logs.html  view_log.html
templates/django_mail/: email.html
templates/django_mailbox/: email.html
